@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.retrospect.channel.mtg"
-       version="4.1.8.2"
+       version="4.1.8.3"
        name="Retrospect Modern Time Group (Swedish, Lithuanian and Latvian) Channels"
        provider-name="Bas Rieter">
 
