@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.retrospect.channel.regionalnl"
-       version="4.1.8.1"
+       version="4.1.8.2"
        name="Retrospect Nederlandse Regionale zenders"
        provider-name="Bas Rieter">
 
