@@ -10,8 +10,6 @@ c8fa3216f6480ffe8479549a36529aaf plugin.video.retrospect.channel.regionalnl.l1/l
 0456c0fe11b9d934f1060a3eca07a554 plugin.video.retrospect.channel.regionalnl.rpoapp/omroepzeelandfanart.jpg
 b38ca0dd3c2da45ebbd458d20619258f plugin.video.retrospect.channel.regionalnl.at5/at5image.png
 0f2bd8ae5d3035030ac19cd6fad3a52f plugin.video.retrospect.channel.regionalnl.at5/at5large.png
-e75fb24f0ad1d644d6b17f4ae6d661a6 plugin.video.retrospect.channel.regionalnl.atv/atvicon.png
-6f1c6e156725f3c19bbcc45fd9a137f9 plugin.video.retrospect.channel.regionalnl.atv/atvimage.png
 5739a9a44ec03804507ce18d4a525b47 plugin.video.retrospect.channel.regionalnl.flevo/flevoimage.png
 6fa930d075df2ab3a563beb88f9e08b6 plugin.video.retrospect.channel.regionalnl.flevo/flevolarge.png
 e2c26c73806616ccd77587d5807b477e plugin.video.retrospect.channel.regionalnl.gelderland/gelderlandimage.png
