@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.retrospect.channel.streams"
-       version="4.1.8.2"
+       version="4.1.8.3"
        name="Retrospect Stream collection for Radio and TV"
        provider-name="Bas Rieter">
 
