@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon  id="plugin.video.retrospect"
-        version="4.1.8.18"
+        version="4.1.8.19"
         name="Retrospect"
         provider-name="Bas Rieter">
 
@@ -117,20 +117,25 @@
         <description lang="en">Retrospect uses the official websites of a lot of different broadcasting companies (mainly Dutch, Belgian, British and Swedish) to make their re-run episodes available on the Kodi platform. More information can be found at www.rieter.net.[CR][CR]Retrospect reports back usage statistics to our servers. This option can be disabled from the add-on settings.</description>
         <disclaimer lang="en">Retrospect is provided as is. We do not take any responsibility for possible (but highly unlikely) damage cause to your system. Nor do we take responsibility for the content that can be watched via this add-on.</disclaimer>
         <language>en nl de se no lt lv fi</language>
-        <news>[B]Retrospect v4.1.8.18 - Changelog - 2019-05-05[/B]
+        <news>[B]Retrospect v4.1.8.19 - Changelog - 2019-05-13[/B]
 
 !! Due to the changing of the add-on ID, there is an extra add-on data migration step required. This happens as soon as you install the new version. !!
 
 [B]Framework related[/B]
-* Added: internal `urllib3` library to prevent performance issues (Fixes #1159)
-* Added: option to pass plugin:// url to item
+-
 
 [B]GUI/Settings/Language related[/B]
+* Changed: dates are shown a bit more dim for folders
 * Updated: show geo/drm warning symbols in yellow
 
 [B]Channel related[/B]
-* Fixed: NPO radio would not list
-
+* Fixed: ViaFree changed their JSON....again....and broke the main listing (Fixes #1163)
+* Removed: TV.nl channel as none of them worked anymore
+* Fixed: L1 did not work at all
+* Fixed: Omroep Flevoland
+* Removed: ATV as it broke a long time ago
+* Fixed: AT5 would not work
+* Fixed: fallback to other streams if embedded stream configuration is missing for kijk.nl
         </news>
         <assets>
             <icon>icon.png</icon>
